--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="MainActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteY="8dp"
+            tools:layout_editor_absoluteX="8dp"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/numbersDisplayer"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:textSize="30sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right">
+                <Button
+                    android:layout_width="140dp"
+                    android:layout_height="70dp"
+                    android:text="C"
+                    android:textSize="25dp"
+                    android:id="@+id/clear"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="("
+                    android:textSize="25dp"
+                    android:id="@+id/leftBracket"
+                    />
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text=")"
+                    android:textSize="25dp"
+                    android:id="@+id/rightBracket"
+                    />
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="√"
+                    android:textSize="25dp"
+                    android:id="@+id/root"
+                    />
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="del"
+                    android:textSize="25dp"
+                    android:id="@+id/deleteLast"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="7"
+                    android:textSize="25dp"
+                    android:id="@+id/seven"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="8"
+                    android:textSize="25sp"
+                    android:id="@+id/eight"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="9"
+                    android:textSize="25sp"
+                    android:id="@+id/nine"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="/"
+                    android:textSize="25sp"
+                    android:id="@+id/subtract"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="4"
+                    android:textSize="25sp"
+                    android:id="@+id/four"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="5"
+                    android:textSize="25sp"
+                    android:id="@+id/five"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="6"
+                    android:textSize="25sp"
+                    android:id="@+id/six"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="*"
+                    android:textAllCaps="false"
+                    android:textSize="25sp"
+                    android:id="@+id/multiply"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="1"
+                    android:textSize="25sp"
+                    android:id="@+id/one"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="2"
+                    android:textSize="25sp"
+                    android:id="@+id/two"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="3"
+                    android:textSize="25sp"
+                    android:id="@+id/three"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="+"
+                    android:textSize="25sp"
+                    android:id="@+id/plus"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="."
+                    android:textSize="25sp"
+                    android:id="@+id/dot"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="0"
+                    android:textSize="25sp"
+                    android:id="@+id/zero"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="="
+                    android:textSize="25sp"
+                    android:id="@+id/equals"/>
+                <Button
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:text="-"
+                    android:textSize="25sp"
+                    android:id="@+id/minus"/>
+
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
